# torrent-renamer-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: x86-ubuntu.yml  x86-windows.yml
crates/app/: Cargo.toml
crates/app/src/: app.rs  app_bookmarks.rs  app_file.rs  app_folder.rs  app_folder_cache.rs  bookmarks.rs  episode_cache.rs  file_descriptor.rs  file_intent.rs  lib.rs  transliterate.rs  tvdb_cache.rs
crates/tvdb/: Cargo.toml
crates/tvdb/src/: api.rs  models.rs
res/: app_config.json
