[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
futures = "0.3.28"
lazy_static = "1.4.0"
regex = "1.10.2"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
tvdb = { version = "0.1.0", path = "../tvdb" }
walkdir = "2.4.0"
